Update with newly found attribute for updateItem in Collect.js

--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -242,6 +242,7 @@ Manual uploads might be fine if you nearly never update items or their parameter
         "item_type": "product",
         "item": "ProductCode",
         "name": "ProductName",
+        "description": "ProductDescription",
         "url": "ProductURL",
         "unique_id": "ProductSKU",
         "available": "y",
